Added depenencies for javafx and edited references