@@ -19,6 +19,20 @@
   </properties>
 
   <dependencies>
+
+    <!-- javafx -->
+    <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>17.0.2</version>
+    </dependency>
+    <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>17.0.2</version>
+    </dependency>
+
+    <!-- junit testing with jupiter -->
     <dependency>
               <groupId>org.junit.jupiter</groupId>
               <artifactId>junit-jupiter-api</artifactId>
@@ -37,6 +51,28 @@
             <version>5.7.2</version>
             <scope>test</scope>
     </dependency>
+
+    <!-- test javafx with TextFX -->
+		<dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-core</artifactId>
+            <version>4.0.16-alpha</version>
+            <scope>test</scope>
+		</dependency>
+		<dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-junit5</artifactId>
+            <version>4.0.16-alpha</version>
+            <scope>test</scope>
+    </dependency>
+    <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>2.2</version>
+            <scope>test</scope>
+    </dependency>
+
+    <!-- json-->
     <dependency>
             <groupId>com.googlecode.json-simple</groupId>
             <artifactId>json-simple</artifactId>
@@ -58,14 +94,21 @@
                 <groupId>org.apache.maven.plugins</groupId>
         		    <artifactId>maven-surefire-plugin</artifactId>
 		            <version>3.0.0-M5</version>
+                <configuration>
+                    <argLine>
+                    <!--Endret fra opens app/app=ALL-UNNAMED-->
+                      --add-opens CalendarApp.core/CalendarApp.core=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                    </argLine>
+                </configuration>
 	    </plugin>
       <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.6</version>
+                <!-- Usage: mvn javafx:run -->
                 <configuration>
-                  <!--May be necessary to change the adress to mainClass later!!-->
-                  <mainClass>CalendarApp.core.CalendarApp</mainClass>
+                  <!--May be necessary to change the adress to mainClass later!-->
+                  <mainClass>CalendarApp.core/CalendarApp.core.CalendarApp</mainClass>
                 </configuration>
       </plugin>
     </plugins>
